# MLOPS-PROJ-1

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  demo.py  projectflow.txt  pyproject.toml  requirements.txt  setup.py  template.py
.github/workflows/: aws.yaml
artifact/03_15_2025_12_32_45/data_transformation/transformed_object/: preprocessing.pkl
artifact/03_15_2025_14_18_22/data_transformation/transformed_object/: preprocessing.pkl
artifact/03_15_2025_14_18_22/model_trainer/trained_model/: model.pkl
artifact/03_19_2025_01_01_25/data_transformation/transformed_object/: preprocessing.pkl
artifact/03_19_2025_01_01_25/model_trainer/trained_model/: model.pkl
notebook/: exp-notebook.ipynb  mongoDB_demo.ipynb
src/components/: data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/configuration/: mongo_db_connection.py
src/constants/: __init__.py
src/data_access/: proj1_data.py
src/entity/: artifact_entity.py  config_entity.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipline/: training_pipeline.py
src/utils/: main_utils.py
